--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "private": true,
   "main": "dist/index.js",
   "dependencies": {
-    "@material-ui/core": "4.3.2",
-    "@material-ui/icons": "4.2.1",
     "classnames": "2.2.6",
     "history": "4.9.0",
     "moment": "2.24.0",
@@ -22,6 +20,8 @@
     "react-swipeable-views": "0.13.3"
   },
   "devDependencies": {
+    "@material-ui/core": "4.3.2",
+    "@material-ui/icons": "4.2.1",
     "@babel/cli": "7.5.5",
     "@babel/plugin-proposal-class-properties": "7.5.5",
     "@babel/preset-env": "7.5.5",
@@ -33,6 +33,10 @@
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "prettier": "1.18.2"
+  },
+  "peerDependencies": {
+    "@material-ui/core": ">=4.3",
+    "@material-ui/icons": ">=4.2"
   },
   "optionalDependencies": {
     "typescript": "3.5.3"
